--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GeffenProject">
-
-
-
+        <activity
+            android:name=".Notes_Activity"
+            android:exported="false" />
         <activity
             android:name=".UserProfileActivity"
             android:exported="false" />
