--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GeffenProject">
         <activity
+            android:name=".MasterPage"
+            android:exported="false" />
+        <activity
+            android:name=".chords"
+            android:exported="false" />
+        <activity
             android:name=".Notes_Activity"
             android:exported="false" />
         <activity
